# ds4tux

./: .gitignore  CHANGELOG.md  PKGBUILD  README.md  ds4tux.conf.example  install.sh  pyproject.toml
docs/: technical.md
openrc/: ds4tux
src/ds4tux/: __init__.py  __main__.py  config.py  device.py  exceptions.py  uinput.py
src/ds4tux/actions/: __init__.py  battery.py  gyro.py  latency.py  led.py
src/ds4tux/backend/: __init__.py  bluez_client.py  bluez_l2cap.py  hidraw.py
src/ds4tux/settings/: client.py  server.py  tui.py
systemd/: ds4tux.service
tools/: bt_diag.py  hidp_setup.py  test_uinput_events.py
udev/: 50-ds4tux-audio.rules  50-ds4tux.rules
