[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds4tux"
version = "0.3.3"
description = "DualShock 4 userspace driver for Linux — reliable, copycat-aware, Steam-friendly"
authors = [{ name = "ds4tux contributors" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "evdev >= 1.4.0",
    "pyudev >= 0.22",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]

[project.scripts]
ds4tux = "ds4tux.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ds4tux"]
